workin on status effects

--- a/myawesomegame/myawesomegame.vcxproj
+++ b/myawesomegame/myawesomegame.vcxproj
@@ -128,6 +128,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="maingame.cpp" />
+    <ClCompile Include="startgame.cpp" />
+    <ClCompile Include="startgame.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
