--- a/myawesomegame/myawesomegame.vcxproj.filters
+++ b/myawesomegame/myawesomegame.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="maingame.cpp">
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
+    <ClCompile Include="startgame.h">
+      <Filter>Archivos de recursos</Filter>
+    </ClCompile>
+    <ClCompile Include="startgame.cpp">
+      <Filter>Archivos de recursos</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
